tests/specs/ecosystem/mrii/rocket_io/0_1_3.test
mrii/rocket-io/0.1.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:socket.io-client@^4.7.5": "npm:socket.io-client@4.7.5"
    },
    "npm": {
      "@socket.io/component-emitter@3.1.0": {
        "integrity": "sha512-+9jVqKhRSpsc591z5vX+X5Yyw+he/HCB4iQ/RYxw35CEPaY1gnsNE43nf9n9AaYjAQrTiI/mOwKUKdUs9vf7Xg==",
        "dependencies": {}
      },
      "debug@4.3.4": {
        "integrity": "sha512-PRWFHuSU3eDtQJPvnNY7Jcket1j0t5OuOsFzPPzsekD52Zl8qUfFIPEiswXqIvHWGVHOgX+7G/vCNNhehwxfkQ==",
        "dependencies": {
          "ms": "ms@2.1.2"
        }
      },
      "engine.io-client@6.5.3": {
        "integrity": "sha512-9Z0qLB0NIisTRt1DZ/8U2k12RJn8yls/nXMZLn+/N8hANT3TcYjKFKcwbw5zFQiN4NTde3TSY9zb79e1ij6j9Q==",
        "dependencies": {
          "@socket.io/component-emitter": "@socket.io/component-emitter@3.1.0",
          "debug": "debug@4.3.4",
          "engine.io-parser": "engine.io-parser@5.2.2",
          "ws": "ws@8.11.0",
          "xmlhttprequest-ssl": "xmlhttprequest-ssl@2.0.0"
        }
      },
      "engine.io-parser@5.2.2": {
        "integrity": "sha512-RcyUFKA93/CXH20l4SoVvzZfrSDMOTUS3bWVpTt2FuFP+XYrL8i8oonHP7WInRyVHXh0n/ORtoeiE1os+8qkSw==",
        "dependencies": {}
      },
      "ms@2.1.2": {
        "integrity": "sha512-sGkPx+VjMtmA6MX27oA4FBFELFCZZ4S4XqeGOXCv68tT+jb3vk/RyaKWP0PTKyWtmLSM0b+adUTEvbs1PEaH2w==",
        "dependencies": {}
      },
      "socket.io-client@4.7.5": {
        "integrity": "sha512-sJ/tqHOCe7Z50JCBCXrsY3I2k03iOiUe+tj1OmKeD2lXPiGH/RUCdTZFoqVyN7l1MnpIzPrGtLcijffmeouNlQ==",
        "dependencies": {
          "@socket.io/component-emitter": "@socket.io/component-emitter@3.1.0",
          "debug": "debug@4.3.4",
          "engine.io-client": "engine.io-client@6.5.3",
          "socket.io-parser": "socket.io-parser@4.2.4"
        }
      },
      "socket.io-parser@4.2.4": {
        "integrity": "sha512-/GbIKmo8ioc+NIWIhwdecY0ge+qVBSMdgxGygevmdHj24bsfgtCmcUUcQ5ZzcylGFHsN3k4HB4Cgkl96KVnuew==",
        "dependencies": {
          "@socket.io/component-emitter": "@socket.io/component-emitter@3.1.0",
          "debug": "debug@4.3.4"
        }
      },
      "ws@8.11.0": {
        "integrity": "sha512-HPG3wQd9sNQoT9xHyNCXoDUa+Xw/VevmY9FoHyQ+g+rrMn4j6FB4np7Z0OhdTgjx6MgQLK7jwSy1YecU1+4Asg==",
        "dependencies": {}
      },
      "xmlhttprequest-ssl@2.0.0": {
        "integrity": "sha512-QKxVRxiRACQcVuQEYFsI1hhkrMlrXHPegbbd1yn9UHOmRxY+si12nQYzri3vbzt8VdTTRviqcKxcyllFas5z2A==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Uncaught Error: Failed resolving package subpath './build/esm/socket' for '<global_npm_dir>/socket.io-client/4.7.5/package.json': [ERR_PACKAGE_PATH_NOT_EXPORTED] Package subpath './build/esm/socket' is not defined for types by "exports" in '<global_npm_dir>/socket.io-client/4.7.5/package.json' imported from '<tmpdir>/src/types/socket-reserved-events.ts'
    at Object.resolveModuleNames (ext:deno_tsc/99_main_compiler.js:756:28)
    at actualResolveModuleNamesWorker (ext:deno_tsc/00_typescript.js:120758:144)
    at resolveModuleNamesWorker (ext:deno_tsc/00_typescript.js:121155:22)
    at resolveModuleNamesReusingOldState (ext:deno_tsc/00_typescript.js:121250:16)
    at processImportedModules (ext:deno_tsc/00_typescript.js:122813:120)
    at findSourceFileWorker (ext:deno_tsc/00_typescript.js:122544:9)
    at findSourceFile (ext:deno_tsc/00_typescript.js:122408:22)
    at processImportedModules (ext:deno_tsc/00_typescript.js:122839:13)
    at findSourceFileWorker (ext:deno_tsc/00_typescript.js:122544:9)
    at findSourceFile (ext:deno_tsc/00_typescript.js:122408:22)

